Added results div class

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	</select>
 <p><button type="submit" id="submitButton">Submit</button></p>
 </form>
-	<div class="container">
-	<h2>May I suggest the following ingredients:</h2>
+	<div class="results container">
+
 	</div>
 </div>
 </body>
